--- a/item-service-dev.properties
+++ b/item-service-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente desarrollo
-configuracion.autor.nombre=Alexis
-configuracion.autor.email=alexispajuelo6@gmail.com
+configuracion.texto=Configurando ambiente desarrollo ...
+configuracion.autor.nombre=Junior
+configuracion.autor.email=juniorpajuelo6@gmail.com
