--- a/user-service-dev.properties
+++ b/user-service-dev.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgresSQL95Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto=create
 
 logging.level.org.hibernate.SQL=debug
